src/smtlib/snapshots/temporal_verifier__smtlib__proc__tests__cvc4_ill_formed.snap
---
source: src/smtlib/proc.rs
expression: r.unwrap_err()
---
solver unexpectedly exited:
Parse Error: <stdin>:6.14: Symbol and is not declared.

  (assert (= and or))
             ^

